added arrow image in spend view

--- a/Savio/SpendView/SASpendViewController.xib
+++ b/Savio/SpendView/SASpendViewController.xib
@@ -113,7 +113,7 @@
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZbP-PN-zDR">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Arrow.png" translatesAutoresizingMaskIntoConstraints="NO" id="ZbP-PN-zDR">
                     <rect key="frame" x="550" y="493" width="40" height="50"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="40" id="AKR-s5-8Ti"/>
@@ -153,4 +153,7 @@
             <point key="canvasLocation" x="221" y="203"/>
         </view>
     </objects>
+    <resources>
+        <image name="Arrow.png" width="77" height="91"/>
+    </resources>
 </document>
