--- a/Savio/SavingPlanSetupCells/GroupParticipantNameTableViewCell.xib
+++ b/Savio/SavingPlanSetupCells/GroupParticipantNameTableViewCell.xib
@@ -18,10 +18,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GroupParticipantNameTableViewCellIdentifier" id="KGk-i7-Jjw" customClass="GroupParticipantNameTableViewCell" customModule="Savio" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="35"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="34"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="34"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="33"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Gq-mG-C4v">
@@ -60,8 +60,8 @@
                             <constraint firstAttribute="height" constant="1" id="Btk-0p-rlH"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
+                        <color key="textColor" red="0.34901960780000002" green="0.34901960780000002" blue="0.34901960780000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="highlightedColor" red="0.34901960780000002" green="0.34901960780000002" blue="0.34901960780000002" alpha="1" colorSpace="calibratedRGB"/>
                     </label>
                 </subviews>
                 <color key="backgroundColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
@@ -80,13 +80,14 @@
                     <constraint firstItem="SsL-M9-2to" firstAttribute="leading" secondItem="UWD-Pr-tQj" secondAttribute="trailing" constant="40" id="soa-tc-eU3"/>
                 </constraints>
             </tableViewCellContentView>
-            <color key="backgroundColor" red="0.63921570780000003" green="0.63529413940000001" blue="0.63921570780000003" alpha="1" colorSpace="deviceRGB"/>
+            <color key="backgroundColor" red="0.36470588235294116" green="0.37254901960784315" blue="0.39215686274509803" alpha="1" colorSpace="calibratedRGB"/>
+            <inset key="separatorInset" minX="1000" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
                 <outlet property="ParticipantsNameLabel" destination="4Gq-mG-C4v" id="v0C-qZ-h4E"/>
                 <outlet property="deleteContactButton" destination="SsL-M9-2to" id="fqH-sg-eeO"/>
                 <outlet property="phoneOrEmailLabel" destination="UWD-Pr-tQj" id="QbZ-Ok-Ict"/>
             </connections>
-            <point key="canvasLocation" x="535" y="366.5"/>
+            <point key="canvasLocation" x="386" y="319.5"/>
         </tableViewCell>
     </objects>
 </document>
