--- a/Savio/FiveDigitVerificationViewController/FiveDigitVerificationViewController.xib
+++ b/Savio/FiveDigitVerificationViewController/FiveDigitVerificationViewController.xib
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <mutableArray key="GothamRounded-Light.otf">
+        <array key="GothamRounded-Light.otf">
             <string>GothamRounded-Light</string>
-        </mutableArray>
-        <mutableArray key="GothamRounded-Medium.otf">
+        </array>
+        <array key="GothamRounded-Medium.otf">
             <string>GothamRounded-Medium</string>
-        </mutableArray>
-        <mutableArray key="gotham-rounded-book-2.otf">
+        </array>
+        <array key="gotham-rounded-book-2.otf">
             <string>GothamRounded-Book</string>
-            <string>GothamRounded-Book</string>
-        </mutableArray>
+        </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FiveDigitVerificationViewController" customModule="Savio" customModuleProvider="target">
@@ -32,28 +32,28 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="savivo-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="Oqd-I4-ww3">
-                    <rect key="frame" x="281" y="50" width="40" height="40"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="savivo-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="Oqd-I4-ww3">
+                    <frame key="frameInset" minX="281" minY="50" width="40" height="40"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="40" id="Esx-OH-HMA"/>
                         <constraint firstAttribute="height" constant="40" id="dpE-lk-Vzi"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We've sent you a verification code" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8DL-NG-yGU">
-                    <rect key="frame" x="160" y="110" width="280" height="100"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="We've sent you a verification code" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8DL-NG-yGU">
+                    <frame key="frameInset" minX="160" minY="110" width="280" height="100"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="100" id="RN8-F7-ylq"/>
                         <constraint firstAttribute="width" constant="280" id="vID-Rp-pBv"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="33"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GpB-HN-YI8">
-                    <rect key="frame" x="140" y="218" width="320" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GpB-HN-YI8">
+                    <frame key="frameInset" minX="140" minY="218" width="320" height="21"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="320" id="9it-s9-tPB"/>
                         <constraint firstAttribute="height" constant="21" id="l7o-Kk-oDK"/>
@@ -61,7 +61,7 @@
                     <attributedString key="attributedText">
                         <fragment content="Your code was sent to 09876543210">
                             <attributes>
-                                <color key="NSColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="NSColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <font key="NSFont" metaFont="system" size="14"/>
                                 <font key="NSOriginalFont" metaFont="system" size="14"/>
                                 <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
@@ -70,9 +70,9 @@
                     </attributedString>
                     <nil key="highlightedColor"/>
                 </label>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A3q-2m-3Rg">
-                    <rect key="frame" x="30" y="377" width="540" height="42"/>
-                    <color key="backgroundColor" red="0.96862745100000003" green="0.58039215690000001" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
+                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="A3q-2m-3Rg">
+                    <frame key="frameInset" minX="30" minY="377" width="540" height="42"/>
+                    <color key="backgroundColor" red="0.96862745100000003" green="0.58039215690000001" blue="0.21960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="42" id="GrC-Og-G3c"/>
                     </constraints>
@@ -82,16 +82,16 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F0n-B1-XQp">
-                    <rect key="frame" x="30" y="377" width="540" height="40"/>
-                    <color key="backgroundColor" red="0.95686274509803915" green="0.69019607843137254" blue="0.22745098039215686" alpha="1" colorSpace="calibratedRGB"/>
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F0n-B1-XQp">
+                    <frame key="frameInset" minX="30" minY="377" width="540" height="40"/>
+                    <color key="backgroundColor" red="0.95686274509803915" green="0.69019607843137254" blue="0.22745098039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="280" id="Jx5-lP-BpK"/>
                         <constraint firstAttribute="height" constant="40" id="Q0h-3T-zoo"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="17"/>
                     <state key="normal" title="Got It">
-                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <variation key="default">
                         <mask key="constraints">
@@ -102,8 +102,8 @@
                         <action selector="clickOnGotItButton:" destination="-1" eventType="touchUpInside" id="Wu4-1E-8TP"/>
                     </connections>
                 </button>
-                <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vat-uq-VUl">
-                    <rect key="frame" x="30" y="214" width="540" height="40"/>
+                <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vat-uq-VUl">
+                    <frame key="frameInset" minX="30" minY="214" width="540" height="40"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="280" id="1h3-uh-xpX"/>
                         <constraint firstAttribute="height" constant="40" id="end-TZ-Q6z"/>
@@ -119,8 +119,8 @@
                         <outlet property="delegate" destination="-1" id="fBL-Te-TaU"/>
                     </connections>
                 </textField>
-                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aKg-ku-OcO">
-                    <rect key="frame" x="253" y="274" width="95" height="30"/>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aKg-ku-OcO">
+                    <frame key="frameInset" minX="253" minY="274" width="95" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="I4p-wr-5do"/>
                         <constraint firstAttribute="width" constant="95" id="iC4-aq-eXZ"/>
@@ -129,7 +129,7 @@
                         <attributedString key="attributedTitle">
                             <fragment content="Resend Code">
                                 <attributes>
-                                    <color key="NSColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="NSColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <font key="NSFont" metaFont="system" size="14"/>
                                     <integer key="NSUnderline" value="1"/>
                                 </attributes>
@@ -140,8 +140,8 @@
                         <action selector="clickOnResentCodeButton:" destination="-1" eventType="touchUpInside" id="uFq-yd-zad"/>
                     </connections>
                 </button>
-                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0wM-Li-Y8L">
-                    <rect key="frame" x="277" y="441" width="46" height="20"/>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0wM-Li-Y8L">
+                    <frame key="frameInset" minX="277" minY="441" width="46" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="1RL-Te-PCX"/>
                         <constraint firstAttribute="width" constant="46" id="cL4-h2-iRW"/>
@@ -150,7 +150,7 @@
                         <attributedString key="attributedTitle">
                             <fragment content="Back">
                                 <attributes>
-                                    <color key="NSColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="NSColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <font key="NSFont" metaFont="system" size="14"/>
                                     <integer key="NSUnderline" value="1"/>
                                 </attributes>
@@ -161,18 +161,18 @@
                         <action selector="clickOnBackButton:" destination="-1" eventType="touchUpInside" id="I2k-mC-Gj6"/>
                     </connections>
                 </button>
-                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Code does not match" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YnB-er-ZmT">
-                    <rect key="frame" x="171" y="195" width="258" height="21"/>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Code does not match" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YnB-er-ZmT">
+                    <frame key="frameInset" minX="171" minY="195" width="258" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="ef4-W7-OZY"/>
                         <constraint firstAttribute="width" constant="258" id="tNL-i6-SX6"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="GothamRounded-Light" family="Gotham Rounded" pointSize="15"/>
-                    <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="0wM-Li-Y8L" firstAttribute="top" secondItem="F0n-B1-XQp" secondAttribute="bottom" constant="20" id="0Gw-OQ-Pkn"/>
                 <constraint firstItem="Vat-uq-VUl" firstAttribute="top" secondItem="GpB-HN-YI8" secondAttribute="bottom" constant="-25" id="1hE-Yr-Z7i"/>
@@ -214,8 +214,9 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
             <items>
+                <barButtonItem style="plain" systemItem="flexibleSpace" id="ziL-NN-Yzn"/>
                 <barButtonItem title="Done" id="i3K-YM-hSv">
-                    <color key="tintColor" red="0.95294117649999999" green="0.68627450980000004" blue="0.23529411759999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="tintColor" red="0.95294117649999999" green="0.68627450980000004" blue="0.23529411759999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <connections>
                         <action selector="doneButtonToolBarPressed:" destination="-1" id="E7G-b2-WZY"/>
                     </connections>
@@ -224,6 +225,6 @@
         </toolbar>
     </objects>
     <resources>
-        <image name="savivo-logo.png" width="85" height="85"/>
+        <image name="savivo-logo.png" width="84" height="84"/>
     </resources>
 </document>
